fixed responsiveness on smaller screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
   .showcase-form-shrink {
     position: relative;
     min-height: 350px;
-    min-width: 360px;
+    min-width: 340px;
     z-index: 100;
   }
   /* ... */
